# SparkLyrics

./: CMakeLists.txt  README.md  build-win.sh  build.bat  build.sh  run.sh  sparklyrics.pro
src/: art_fetcher.cpp  art_fetcher.h  discord_rpc.cpp  discord_rpc.h  lrc_api.cpp  lrc_api.h  lyrics_engine.cpp  lyrics_engine.h  main.cpp  player_monitor.cpp  player_monitor.h  sparklyrics.cpp  sparklyrics.h
